--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 							<h3 class="agileits-title">My Projects</h3>  
 							<div class="serv-wthree-row w3layouts">
 								<div class="col-xs-3 services-w3lsleft">
-									<i class="fa fa-code" style="font-size: 40px;"></i>
+									<i class="fa fa-code" style="font-size: 40px;color:white"></i>
 								</div>
 								<div class="col-xs-9 services-w3lsright">
 									<h4>Blood Donation Web Application</h4>
@@ -200,7 +200,7 @@
 							</div>
 							<div class="serv-wthree-row w3layouts serv-wthree-rowmdl">
 								<div class="col-xs-3 services-w3lsleft">
-									<i class="fa fa-code" style="font-size: 40px;"></i>
+									<i class="fa fa-code" style="font-size: 40px;color:white"></i>
 								</div>
 								<div class="col-xs-9 services-w3lsright">
 									<h4>Go Green</h4>
@@ -210,7 +210,7 @@
 							</div>
 							<div class="serv-wthree-row w3layouts">
 								<div class="col-xs-3 services-w3lsleft">
-									<i class="fa fa-code" style="font-size: 40px;"></i>
+									<i class="fa fa-code" style="font-size: 40px;color:white"></i>
 								</div>
 								<div class="col-xs-9 services-w3lsright">
 									<h4>Scrapy</h4>
